style.css
/* ... */
/* Grey Circles Section */
.grey-circles-section {
  height: 0px;
  background: #e5e6e7;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  padding-bottom: 1.39vw;
  padding-top: 0px;
  margin-bottom: 3.47vw;
  margin-top: 0px;
  overflow: visible;
  z-index: 1;
}

.bg-circles {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: -1;
  overflow: visible;
}

.bg-circle {
  position: absolute;
  border-radius: 50%;
  opacity: 1;
  z-index: -1;
}

.bg-circle.grey {
  background-color: #a8a8a8;
}

.bg-circle.circle-asset {
  background-image: url('./assets/circle.webp');
  background-size: 110% 110%;
  background-position: center;
}

.grey-circles-container {
  display: flex;
  justify-content: space-around;
  align-items: center;
  gap: 0;
  width: 100%;
  z-index: 10;
  position: absolute;
  top: 2vw;
  left: 0;
  right: 0;
}

.grey-circle {
  width: 12.5vw;
  height: 12.5vw;
  border-radius: 50%;
  background-image: url('./assets/CircleGrey.png');
  background-size: cover;
  background-position: center;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 2;
  cursor: pointer;
  transition: transform 0.3s ease, opacity 0.3s ease;
  flex-shrink: 0;
}

.grey-circle:hover {
  transform: scale(1.05);
  opacity: 0.9;
}

.circle-logo {
  width: 5.56vw;
  height: auto;
  object-fit: contain;
}

.grey-circle:first-child .circle-logo {
  width: 9.03vw;
}

.grey-circle:nth-child(2) .circle-logo {
  width: 4.86vw;
}

.grey-circle:nth-child(4) .circle-logo {
  width: 6.94vw;
}

/* Scene 4 - Two small circles animating apart */
.scene4-circles-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0;
  z-index: 15;
}

.scene4-image-circle {
  width: 36vw;
  height: 36vw;
  border-radius: 50%;
  background-image: url('./assets/image04.webp');
  background-size: 110% 110%;
  background-position: center;
  position: absolute;
  top: 21vw;
  left: calc(50% + 12.5vw);
  transform: translate(-50%, -50%);
  z-index: 5;
  opacity: 1;
}

.scene4-red-circle {
  width: 36vw;
  height: 36vw;
  border-radius: 50%;
  background-image: url('./assets/circle.webp');
  background-size: 110% 110%;
  background-position: center;
  position: absolute;
  left: calc(50% + 12.5vw);
  transform: translate(-50%, -50%);
  top: 21vw;
  z-index: 10;
  opacity: 0.9;
  display: flex;
  justify-content: center;
  align-items: center;
  border: none;
  outline: none;
  mix-blend-mode: normal;
}

.scene4-grey-circle {
  width: 12.5vw;
  height: 12.5vw;
  border-radius: 50%;
  background-image: url('./assets/CircleGrey.png');
  background-size: cover;
  background-position: center;
  position: absolute;
  left: calc(50% + 12.5vw);
  top: 21vw;
  transform: translate(-50%, -50%);
  z-index: 9;
  opacity: 1;
  display: flex;
  justify-content: center;
  align-items: center;
}

.scene4-grey-logo {
  width: 9.72vw;
  /* height: 100px; */
  object-fit: contain;
  opacity: 1;
  position: relative;
  top: -1.74vw;
}

.scene4-red-text {
  position: relative;
  width: 23.61vw;
  text-align: center;
  opacity: 0;
  transform: translateY(60px);
  font-family: 'Montserrat', sans-serif;
  pointer-events: auto;
}

.scene4-red-heading {
  font-size: 1.1vw;
  font-weight: 700;
  color: #fff;
  margin-bottom: 0.69vw;
  letter-spacing: 1px;
}

.scene4-red-desc {
  font-family: 'Montserrat', sans-serif;
  font-weight: 500;
  font-size: 0.97vw;
  line-height: 1.4;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
  margin-bottom: 10px;
}

.scene4-read-more {
  background: none;
  border: none;
  cursor: pointer;
  padding: 0;
  opacity: 0.9;
}

.read-more-btn {
  background: none;
  border: none;
  cursor: pointer;
  padding: 0;
  opacity: 0.9;
  pointer-events: auto;
}

.read-more-icon {
  height: 1.67vw;
  width: auto;
  display: block;
  filter: brightness(0) invert(1);
}

.scene4-new-text {
  position: absolute;
  right: calc(50% + 6.93vw);
  top: 3.65vw;
  width: 28vw;
  font-family: 'Montserrat', sans-serif;
  font-weight: 700;
  font-size: 3.47vw;
  line-height: 1;
  letter-spacing: -0.05em;
  z-index: 11;
  pointer-events: none;
  text-align: left;
}

.scene4-text-group {
  opacity: 0;
}

.scene4-new-line {
  margin-bottom: 0;
}

.text-red {
  color: var(--color-red);
}

.text-blue {
  color: var(--color-blue);
}

.scene5-new-text {
  position: absolute;
  left: 35%;
  top: -1vw;
  font-family: 'Montserrat', sans-serif;
  font-weight: 700;
  font-size: 3.82vw;
  line-height: 1.1;
  letter-spacing: -0.05em;
  z-index: 11;
  pointer-events: none;
  text-align: right;
}

.scene5-text-group {
  opacity: 0;
}

.scene5-new-line {
  margin-bottom: 0;
}

.scene7-new-text {
  position: absolute;
  right: 10%;
  top: -5vw;
  font-family: 'Montserrat', sans-serif;
  font-weight: 700;
  font-size: 3.82vw;
  line-height: 1.1;
  letter-spacing: -0.05em;
  z-index: 110;
  pointer-events: none;
  text-align: right;
}

.scene7-text-group {
  opacity: 0;
}

.scene7-new-line {
  margin-bottom: 0;
}

.scene6-new-text {
  position: absolute;
  right: 51.5vw;
  top: -5vw;
  width: 36vw;
  font-family: 'Montserrat', sans-serif;
  font-weight: 700;
  font-size: 3.4vw;
  line-height: 1.1;
  letter-spacing: -0.05em;
  z-index: 11;
  pointer-events: none;
  text-align: left;
}

.scene6-text-group {
  opacity: 0;
}

.scene6-new-line {
  margin-bottom: 0;
}

.scene4-tagline {
  position: absolute;
  left: -50%;
  top: -20%;
  font-family: 'Montserrat', sans-serif;
  font-size: 4.17vw;
  font-weight: 700;
  line-height: 1.2;
  z-index: 12;
  opacity: 0;
}

.scene4-tagline-red {
  color: var(--color-red);
  display: block;
}

.scene4-tagline-blue {
  color: var(--color-blue);
  display: block;
}
/* ... */

